[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydoppler"
authors = [{name = "Euiseo Cha", email = "zeroday0619_dev@outlook.com"}]
maintainers = [{name = "Euiseo Cha", email = "zeroday0619_dev@outlook.com"}]
license = "LICENSE"
version = "0.1.0"
readme = "README.md"

classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/Netchive/pydoppler-sdk"