[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydoppler"
authors = [{name = "Euiseo Cha", email = "zeroday0619_dev@outlook.com"}]
maintainers = [{name = "Euiseo Cha", email = "zeroday0619_dev@outlook.com"}]
license = "LICENSE"
version = "0.1.0"
readme = "README.md"

classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ["version", "description"]

dependencies = [
    "httpx>=0.23.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-cov"
]
lint = [
    "black>=22.3.0",
    "flake8>=4.0.1",
    "isort>=5.10.1",
    "autoflake>=2.4.0",
    "mypy>=0.961"   
]

[project.urls]
Source = "https://github.com/Netchive/pydoppler-sdk"
